[project]
name = "us-data-generator"
version = "0.1.0"
description = "Generates a grayscale image with some simple shapes and adds speckle-like noise, mimicking basic ultrasound image characteristics."
authors = [
    {name = "Alex Carrega",email = "alessandro.carrega@unige.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "clize (>=5.0.2,<6.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
